# GradientEditor-CrewAi

./: .gitignore  README.md  fastapi_app.py  main.py  pyproject.toml  requirements.txt
knowledge/: gradient_examples.json
src/gradient_editor/: __init__.py  crew.py
src/gradient_editor/config/: agents.yaml  tasks.yaml
src/gradient_editor/tools/: __init__.py  gradient_tools.py
